Product用のAPI仕上げ
